# CG_Project2

./: .gitignore  CMakeLists.txt  GLSLSetup.cpp  img_split.h  load_model.h  main.cpp  main.h  perlin.h  test.cpp  tree.h
include/: load_model.h  main.h  rotate_function.h  tree.h
src/: main.cpp
